# unroll

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: matrix_vector_product.rs  unroll_for_loops.rs  unroll_mode.rs  unroll_sum.rs
src/: lib.rs
