[package]
name = "unroll"
version = "0.2.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An attribute-like procedural macro for unrolling for loops"
readme = "README.md"
edition = "2018"

homepage = "https://gitlab.com/elrnv/unroll"
repository = "https://gitlab.com/elrnv/unroll"
documentation = "https://docs.rs/unroll"

keywords = ["unroll", "for-loop", "attibute"]

[badges]
gitlab = { repository = "elrnv/unroll", branch = "master" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = ["proc-macro", "full"] }
quote = "1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
unstable = ["criterion/real_blackbox"]

[[bench]]
name = "matrix_vector_product"
harness = false

[[bench]]
name = "unroll_sum"
harness = false

[[bench]]
name = "unroll_mode"
harness = false
